--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,4 +1,17 @@
+* {
+  font-family: Graphik LCG, sans-serif;
+  scroll-behavior: smooth;
+}
+
 .container {
+  max-width: 1256px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.heading {
+  color: $text-dark;
+  font-size: 2.5em;
+  font-weight: 600;
+  line-height: 56px;
 }
