--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,5 +2,7 @@
 @import "variables";
 @import "global";
 @import "header";
-@import "faq";
+@import "how";
 @import "third";
+@import "reviews";
+@import "faq";
