--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,7 +2,10 @@
 @import "variables";
 @import "global";
 @import "header";
+@import "burger-menu";
 @import "how";
 @import "third";
 @import "reviews";
 @import "faq";
+@import "survey";
+@import "form";
