--- a/app/scss/_faq.scss
+++ b/app/scss/_faq.scss
@@ -19,6 +19,7 @@
     line-height: 32px;
     transition: all .5s ease;
     svg {
+      margin-left: 10px;
       min-width: 24px;
       min-height: 24px;
       transition: transform .5s ease;
