--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -12,7 +12,7 @@
     margin-bottom: 30px;
   }
   label {
-    width: calc(50% - 32px);
+    width: calc(50% - 2.14vw);
   }
   input[type="text"], input[type="tel"] {
     width: 100%;
@@ -34,12 +34,13 @@
   &__bottom {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 5.35vw;
   }
   .checkbox__title {
     padding-left: 16px;
   }
   &__button {
-    width: calc(50% - 32px);
+    width: calc(50% - 2.14vw);
     padding: 20px 0;
     background-color: #2A6CEA;
     color: #FFFFFF;
@@ -82,5 +83,21 @@
 
   input[type="checkbox"]:checked + .custom-checkbox svg path {
     fill: #fff;
+  }
+  @media (max-width: 700px) {
+    &__top{
+      flex-direction: column;
+      gap: 20px;
+      label {
+        width: 100%;
+      }
+    }
+    &__bottom {
+      flex-direction: column;
+      gap: 20px
+    }
+    &__button {
+      width: 100%;
+    }
   }
 }
