fix: slick-slider

--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -52,7 +52,7 @@
       background-color: #397DFF;
     }
     &:disabled {
-
+      background-color: #ABCAE6;
     }
   }
   input[type="checkbox"] {
