--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -12,7 +12,13 @@
 .heading {
   text-align: center;
   color: $text-dark;
-  font-size: 2.5em;
+  font-size: 40px;
   font-weight: 600;
   line-height: 56px;
+  @media (max-width: 500px) {
+    &{
+      font-size: 24px;
+      line-height: 32px;
+    }
+  }
 }
